--- a/css/style.css
+++ b/css/style.css
@@ -784,6 +784,7 @@ a {
   border: 1px solid #ddd;
   -webkit-box-shadow: 2px 2px 2px #ddd;
   box-shadow: 2px 2px 2px #ddd;
+  vertical-align: middle;
 }
 .article em {
   padding: 0 5px;
